k8s/order.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: order
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      imagePullSecrets:
      - name: registry-pull-secret
      containers:
      - name: order
        image: 192.168.134.104/commodity/order:v1.0
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 2
            memory: 256Mi
          limits:
            cpu: 4
            memory: 256Mi
        readinessProbe:
          exec:
            command:
            - /bin/sh 
            - -c
            - ps -ef | grep order | grep -v grep 
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          exec:
            command:
            - /bin/sh 
            - -c
            - ps -ef | grep order | grep -v grep 
          initialDelaySeconds: 5
          periodSeconds: 10
