k8s/view.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: portal 
  namespace: default 
spec:
  rules:
    - host: www.portal.com 
      http:
        paths:
        - path: /
          backend:
            serviceName: portal 
            servicePort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: portal
  namespace: default
spec:
  ports:
  - port: 8080
    name: portal 
  selector:
    project: default
    app: portal
---
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: portal
  namespace: default 
spec:
  replicas: 1
  selector:
    matchLabels:
      project: default
      app: portal
  template:
    metadata:
      labels:
        project: default 
        app: portal
    spec:
      imagePullSecrets:
      - name: registry-pull-secret
      containers:
      - name: portal
        image: 192.168.134.104/commodity/view:v1.0
        imagePullPolicy: Always
        ports:
          - protocol: TCP
            containerPort: 8088 
        resources:
          requests:
            cpu: 2
            memory: 256Mi
          limits:
            cpu: 4
            memory: 1Gi
        readinessProbe:
          tcpSocket:
            port: 8088
          initialDelaySeconds: 60
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8088
          initialDelaySeconds: 60
          periodSeconds: 10
